--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -3,9 +3,6 @@
     width: 100%;
   }
 
-  nav {
-  }
-
   #main_nav {
     width: 100%;
     display: flex;
