--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,6 +1,7 @@
 @media only screen and (min-width: 748px) {
   header div h1 {
     font-size: 44px;
+    margin-left: -1em;
   }
 
   span#subtitle {
